--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "require": {
         "psr/log": "*",
         "symfony/http-foundation": "*",
-        "phpunit/phpunit": "3.7.*",
+        "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
         "psr-0": {
